# stocksense

./: .gitignore  DEMO.md  README.md  SUPABASE.md  pyproject.toml
.github/workflows/: ci.yml
pipeline/stocksense/: __init__.py  backtest.py  catalog.py  export.py  features.py  generate.py  kpis.py  models.py  orchestrator.py  run.py  spark_features.py  validators.py
supabase/: schema.sql
tests/: conftest.py  test_backtest.py  test_features.py  test_kpis.py  test_orchestrator.py  test_spark_parity.py  test_validators.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/anomalies/: page.tsx
web/app/api/anomalies/: route.ts
web/app/api/inventory/: route.ts
web/app/api/inventory/update/: route.ts
web/app/api/orders/ingest/: route.ts
web/app/api/overview/: route.ts
web/app/api/skus/: route.ts
web/app/data-quality/: page.tsx
web/app/forecasts/: page.tsx
web/app/forecasts/[sku]/[segment]/: page.tsx
web/app/input/: page.tsx
web/app/inventory/: page.tsx
web/app/leaderboard/: page.tsx
web/components/: ForecastChart.tsx  KpiCard.tsx  LiveIndicator.tsx  RefreshedAt.tsx  RiskBadge.tsx  Section.tsx  SourceBadge.tsx
web/components/forms/: CsvUpload.tsx  InventoryForm.tsx  OrderForm.tsx
web/lib/: anomaly.ts  data.ts  forecasting.ts  format.ts  live.ts  loaders.ts  supabase.ts
web/public/data/: anomalies.json  data_quality.json  forecasts.json  inventory.json  kpis.json  leaderboard.json  meta.json  revenue_concentration.json  run_summary.json  slow_movers.json  winners.json
web/scripts/: seed.ts
(+1 files in other folders)
