[project]
name = "stocksense"
version = "0.1.0"
description = "Demand forecasting and inventory health platform for a disposable-products distributor"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Atharva Joshi", email = "atharvaj2112@gmail.com" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "duckdb>=1.0",
    "pyarrow>=14.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
spark = ["pyspark>=3.5"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.5",
]

[project.scripts]
stocksense = "stocksense.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline/stocksense"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
pythonpath = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
